--- a/css/main.css
+++ b/css/main.css
@@ -13,20 +13,20 @@ nav {
     text-align: center;
 }
 h1 {
-    color: rgb(200, 200, 200);
+    color: #c8c8c8;
 }
 h2 {
-    color: rgb(200, 200, 200);
+    color: #c8c8c8;
 }
 h3 {
-    color: rgb(200, 200, 200);
+    color: #c8c8c8;
 }
 p {
-    color: rgb(200, 200, 200);
+    color: #c8c8c8;
 }
 
 li {
-    color: rgb(200, 200, 200);
+    color: #c8c8c8;
 }
 .centrado {
     text-align: center;
