--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,9 @@ ul {
     align-items: center;
     padding: 5px 12px ;
 }
+.navegador:hover {
+    background-color: #2c2c2c;
+}
 .navegador__ul {
     list-style: none;
     display: flex;
@@ -39,6 +42,9 @@ ul {
 .navegador__logo-link {
     display: inline-block;
 }
+.navegador__logo-link:hover {
+    background-color: transparent;
+}
 
 
 .navegador__item {
@@ -56,13 +62,26 @@ ul {
     border: 3px solid #222;
     background-color: #a00000;
     color: #c8c8c8;
+    transition: background-color 0.08s ease, box-shadow 0.08s ease;
 }
+.navegador__link:hover {
+    background-color: #800000;
+    box-shadow: 0 4px 10px #0004;
+}
+.navegador__link:active {
+    background-color: #500000;
+}
+
+
 .navegador__item--espaciador {
     margin-left: auto;
 }
 
 .link--login {
-    
+    background-color: transparent;
+    border: 3px solid #a00000;
+    box-shadow: 0 0 10px 2px #a00000;
+    margin-right: 20px;
 }
 
 /*----- OTROS -----*/
