--- a/css/index.css
+++ b/css/index.css
@@ -1,88 +1,3 @@
-/* ---- APARTADO DE LA NAV-BAR ----- */
-* {
-    box-sizing: border-box;
-}
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-
-.navegador {
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    width: 100%;
-    background-color: #333;
-    border-bottom: 5px solid #393939;
-    display: flex;
-    align-items: center;
-    padding: 5px 12px ;
-}
-.navegador:hover {
-    background-color: #2c2c2c;
-}
-.navegador__ul {
-    list-style: none;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    width: 100%;
-}
-
-
-.navegador__imagen {
-    display: block;
-    height: 48px;
-    width: auto;
-}
-.navegador__item--logo {
-    margin-right: 10px;
-}
-.navegador__logo-link {
-    display: inline-block;
-}
-.navegador__logo-link:hover {
-    background-color: transparent;
-}
-
-
-.navegador__item {
-    align-items: center;
-}
-.navegador__link {
-    display: inline-block;
-    padding: 8px 12px;
-    min-width: 70px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 1rem;
-    flex-grow: 1 1 30px;
-    border-radius: 6px;
-    border: 3px solid #222;
-    background-color: #a00000;
-    color: #c8c8c8;
-    transition: background-color 0.08s ease, box-shadow 0.08s ease;
-}
-.navegador__link:hover {
-    background-color: #800000;
-    box-shadow: 0 4px 10px #0004;
-}
-.navegador__link:active {
-    background-color: #500000;
-}
-
-
-.navegador__item--espaciador {
-    margin-left: auto;
-}
-
-.link--login {
-    background-color: transparent;
-    border: 3px solid #a00000;
-    box-shadow: 0 0 10px 2px #a00000;
-    margin-right: 20px;
-}
 
 /*----- OTROS -----*/
 .imagenPrincipal {
@@ -94,3 +9,5 @@ ul {
     height: auto;
     
 }
+
+/* ----- BANNER ----- */
