--- a/css/index.css
+++ b/css/index.css
@@ -11,3 +11,16 @@
 }
 
 /* ----- BANNER ----- */
+
+.tituloPrincipal {
+    display: flex;
+    justify-content: end;
+}
+.tituloPrincipal__titulo {
+    margin: 20px;
+    margin-right: 40px;
+    margin-bottom: 10%;
+}
+.tituloPrincipal__imagenLogo {
+    width: 40vw;
+}
